_appgateway_websockets/kubernetes/deploy_echo_client_agic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket-echo-client-agic
  labels:
    app: websocket-echo-client-agic
spec:
  replicas: 3
  selector:
    matchLabels:
      app: websocket-echo-client-agic
  template:
    metadata:
      labels:
        app: websocket-echo-client-agic
    spec:
      containers:
        - name: websocket-echo-client
          image: acr4aks08.azurecr.io/websocket-echo-client:1.0.0
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
