_appgateway_websockets/kubernetes/deploy_server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket-echo-server
  labels:
    app: websocket-echo-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: websocket-echo-server
  template:
    metadata:
      labels:
        app: websocket-echo-server
    spec:
      terminationGracePeriodSeconds: 102 # 101 # Defaults to 30 seconds.
      containers:
        - name: websocket-echo-server
          image: acr4aks08.azurecr.io/websocket-echo-server:1.0.0
          ports:
            - containerPort: 8765
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8765
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8765
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 4
            timeoutSeconds: 5
            failureThreshold: 3
          lifecycle:
            preStop:
              exec:
                command: ["sleep", "90"]
# If the preStop hook needs longer to complete than the default grace period allows, you must modify terminationGracePeriodSeconds to suit this.
# If the preStop hook is still running after the grace period expires, the kubelet requests a small, one-off grace period extension of 2 seconds.
---
apiVersion: v1
kind: Service
metadata:
  name: websocket-echo-server
  labels:
    app: websocket-echo-server
spec:
  type: ClusterIP
  selector:
    app: websocket-echo-server
  ports:
    - port: 80
      targetPort: 8765
      protocol: TCP
