_appgateway_websockets/kubernetes/ingress-server.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: websocket-echo-server
  # annotations:
    # kubernetes.io/ingress.class: azure/application-gateway
    # appgw.ingress.kubernetes.io/backend-protocol: "http"
    # appgw.ingress.kubernetes.io/connection-draining: "true"
    # appgw.ingress.kubernetes.io/connection-draining-timeout: "30"
    # appgw.ingress.kubernetes.io/request-timeout: "120"
spec:
  ingressClassName: azure-application-gateway
  rules:
  - http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: websocket-echo-server
            port:
              number: 80
  # rules:
  #   - http:
  #       paths:
  #         - path: /
  #           pathType: Prefix
  #           backend:
  #             service:
  #               name: websocket-echo-server
  #               port:
  #                 number: 80
