_appgateway_websockets/kubernetes/ingress_server.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: websocket-echo-server
  annotations:
    appgw.ingress.kubernetes.io/backend-protocol: "http"
    appgw.ingress.kubernetes.io/connection-draining: "true"
    appgw.ingress.kubernetes.io/connection-draining-timeout: "30"
    appgw.ingress.kubernetes.io/request-timeout: "120"
    appgw.ingress.kubernetes.io/health-probe-path: "/health"
spec:
  ingressClassName: azure-application-gateway
  rules:
  - http:
      paths:
      - path: /websocket-echo-server
        pathType: Exact
        backend:
          service:
            name: websocket-echo-server
            port:
              number: 80
